# CognitiveSubtypes

./: .gitignore  Makefile  README.md  main.py  requirements.txt  setup.cfg  setup.py
notebooks/: analysis.ipynb
scripts/: make_data.sh  make_model.sh  make_venv.sh  run.sh
src/: __init__.py  data.py  filepaths.py  main.py  models.py  plots.py  preprocessing.py  tables.py  utils.py
src/R/: ggseg.R
src/autossh/: config.py  core.py  main.py
src/create_dataset/: README.md  __main__.py  config.py  dataset.py  medications.py
src/data/: base.py  build.py  civet.py  config.py  create_dataset.py  dataset.py  main.py  tabular.py  utils.py
src/data/coding/: __init__.py  diagnoses.json  medications.json
src/data/variables/: __init__.py  characteristics.json  cognition.json  imaging.json
src/data/variables/coding/: __init__.py  coding100305.json  coding100430.json  coding100696.json  coding18.json  coding19.json  coding1990.json  coding4.json  coding6361.json  coding6448.json  coding6459.json  coding6470.json  coding6481.json  coding6492.json  coding6503.json  coding6514.json  coding6525.json  coding6536.json  coding6547.json  coding9.json
src/features/: base.py  cognitive.py  imaging.py
src/models/: base.py  classify.py  cluster.py  fit.py  search.py  utils.py
src/scratch/: kmeans.py
src/variables/: characteristics.json  cognition.json
src/visualization/: __init__.py  figures.py  ggseg.R  plots.py  tables.py  utils.py
