[metadata]
name = CognitiveSubtypes
version = 0.0.1
author = Joshua Unrau
author_email = joshua.unrau@mail.mcgill.ca
description = Cognitive Subtypes and Associations with Brain Structure in the UK Biobank: A Machine Learning Approach
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/joshunrau/CognitiveSubtypes
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.9
scripts = 
    bin/autossh